default error message prevent

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <form action="" class="form"> <!-- form-->
         
             <div class="input-div">
-                <input type="email" name="" id="email" placeholder="Your email address" required class="valid-state">
+                <input type="email"  name="" id="email" placeholder="Your email address" required   class="valid-state" title="">
                 <p id="error" class="hidden"></p>
             </div>
             
